Added Elevator, changed m_destinations to be a stack-allocated array

--- a/config.cfg
+++ b/config.cfg
@@ -1,19 +1,18 @@
-building.stories 100
 building.elevators 3
 
 elevator1.capacity 20
-elevator1.storey.from 50
-elevator1.storey.to 99
-elevator1.skip.intermediary.stops 0
+elevator1.skip.from 1
+elevator1.skip.to 49
 elevator1.skip.when.full 0
 elevator1.speed 1
 elevator1.stop.time 5
 
 elevator2.capacity 20
-elevator2.storey.from 1
-elevator2.storey.to 99
+elevator2.skip.when.full 0
+elevator2.speed 1
+elevator2.stop.time 5
 
 elevator3.capacity 20
-elevator3.storey.from 1
-elevator3.storey.to 50
+elevator3.skip.from 1
+elevator3.skip.to 50
 
