Working. Need some code styling touches.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 ACLOCAL_AMFLAGS = -I m4
 bin_PROGRAMS = CreditSwissElevator		
-CreditSwissElevator_SOURCES = main.cpp Configuration.cpp Elevator.cpp Store.cpp ElevatorController.cpp
+CreditSwissElevator_SOURCES = main.cpp Configuration.cpp Elevator.cpp Store.cpp ElevatorController.cpp Person.cpp
 CreditSwissElevator_LDFLAGS = -lboost_system
